--- a/js-apps/meep-frontend/src/index.html
+++ b/js-apps/meep-frontend/src/index.html
@@ -1,12 +1,12 @@
-<!-->
+<!--
 Copyright (c) 2019
 InterDigital Communications, Inc.
 All rights reserved.
 
 The information provided herein is the proprietary and confidential
 information of InterDigital Communications, Inc.
-<-->
-﻿<!doctype html>
+-->
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
