--- a/js-apps/meep-frontend/src/index.html
+++ b/js-apps/meep-frontend/src/index.html
@@ -26,7 +26,7 @@ limitations under the License.
 
     <title>MEEP Controller</title>
 
-    <link rel="icon" type="image/svg+xml" href="img/ID-Icon-01-idcc.svg">
+    <link rel="icon" type="image/svg+xml" href="img/ID-Icon-01-idcc-blue.svg" />
 
     <link
       rel="stylesheet"
