--- a/js-apps/meep-swagger-ui/index.html
+++ b/js-apps/meep-swagger-ui/index.html
@@ -37,6 +37,7 @@
     <script src="./swagger-ui-standalone-preset.js"> </script>
     <script>
     window.onload = function() {
+      const rootUrl = location.protocol + '//' + location.host + location.pathname;
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         url: "https://petstore.swagger.io/v2/swagger.json",
