modify demo3 mec service update on notification

--- a/examples/demo3/src/frontend/src/index.html
+++ b/examples/demo3/src/frontend/src/index.html
@@ -26,7 +26,7 @@ limitations under the License.
 
     <title>MEEP Demo 3</title>
 
-    <link rel="icon" type="image/svg+xml" href="img/ID-Icon-01-idcc-blue.svg" />
+    <link rel="icon" type="image/svg+xml" href="./img/ID-Icon-01-idcc-blue.svg" />
 
     <link
       rel="stylesheet"
@@ -39,7 +39,7 @@ limitations under the License.
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
   </head>
 
-  <body class="mdc-typography ui-body">
+  <body class="mdc-typography ui-body ui-background"">
     <div id="demo-controller"></div>
   </body>
 </html>
